<resources>
    <string name="app_name">JamRec</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">JamRec</string>

    <string name="menu_metronome">Metronome</string>
    <string name="menu_reset">Clean Track</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_with_name">Save New</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>

    <string name="metronome_show">Show</string>
    <string name="metronome_enable_sound">Sound</string>
    <string name="metronome_bpm">BPM</string>

    <string name="wav_format">WAV</string>
    <string name="mp3_format">MP3</string>
    <string name="flac_format">FLAC</string>
    <string name="aac_format">AAC</string>
    <string name="m4a_format">M4A</string>
    <string name="wma_format">WMA</string>

    <string name="checkBox_sew_the_ends">Cut</string>

    <string name="button_export">Export</string>
    <string name="button_delete_selection">Silence Selection</string>
    <string name="button_share">Share</string>
    <string name="button_save">Save</string>
    <string name="button_open">Open</string>
    <string name="button_delete">Delete</string>
    <string name="codec">Choose Format:</string>

    <string name="emptyTrackMessage">The track is empty</string>
    <string name="saved">Saved</string>
    <string name="exportError">Error during the export, retry or use the WAV format</string>
    <string name="exportErrorLoadLibray">Your device can export only in WAV</string>
</resources>
